[package]
name = "clyde-search"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0", default-features = false, features = ["std"] }
reqwest = { version = "0.12", default-features = false, features = ["json"] }
rocket = { version = "0.5", default-features = false }
rocket_dyn_templates = { version = "0.2", default-features = false, features = ["minijinja"] }
schemars = { version = "0.8", default-features = false, features = ["derive"] }
serde = { version = "1.0", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
serde_with = { version = "3.9", default-features = false, features = ["json", "macros", "schemars_0_8"] }
